--- a/main.tex
+++ b/main.tex
@@ -114,10 +114,11 @@
 %--Skills--
 \section{Skills Summary}
 	\resumeSubHeadingListStart
-	\resumeSubItem{Languages}{~~~~~~~~~~~~~~C++, JAVA, SQL, HTML5, CSS, JavaScript (Basic)}
+	\resumeSubItem{Languages}{~~~~~~~~~~~~~~C++, Core Java, SQL, HTML5, CSS, JavaScript (Basic)}
 	\resumeSubItem{Frameworks}{~~~~~~~~~~~Android Jetpack Compose, Bootstrap}
 	\resumeSubItem{Tools \& Libraries}{~~~Git, C++ STL}
   \resumeSubItem{Platforms}{~~~~~~~~~~~~~~~Visual Studio Code, Android Studio, GitHub, Figma}
+  \resumeSubItem{Familiar}{~~~~~~~~~~~~~~~~~Python, C}
   \resumeSubItem{Courseworks}{~~~~~~~~~~Data Structures, Object Oriented Programming, Database Management System, Operating System}
 	\resumeSubItem{Soft Skills}{~~~~~~~~~~~~~~Active Learning, Emotional Intelligence, Task Management, Workability}
 \resumeSubHeadingListEnd
@@ -132,9 +133,9 @@
 \vspace{5pt}
 {Implemented Dijkstra's Algorithm to determine the optimal flight route between the origin and destination. It mainly uses Graph which takes the source and destination as input and returns an HTML file displaying the calculated route based on two options, the cheapest or fastest.}
 \vspace{5pt}
-\resumeSubItem{Melofy - Spotify inspired app (Kotlin, Jetpack Compose, Material UI, Retrofit)}\\
+\resumeSubItem{Melofy - Spotify inspired app (Kotlin, Jetpack Compose, Material UI)}\\
 \vspace{5pt}
-{Developed an Android playback application entirely in Kotlin using Jetpack Compose for designing the UI and ExoPlayer for media playing.}
+{Developed an Android playback application entirely in Kotlin, leveraging Jetpack Compose for sophisticated UI design and ExoPlayer for seamless media playing. The project is focused on UI development which utilized modern Google Material Design to ensure intutive user experience.}
 \vspace{5pt}
 \resumeSubItem{Bookmania - Digitized bookstore (HTML, CSS, JavaScipt)}\\
 \vspace{5pt}
@@ -161,7 +162,7 @@
 %--Other Achievements--
 \section{Activities \& Achievements}
 \begin{description}[font=$\bullet$]
-  \item {LeetCode \textbf{700+ problems} solved}
+  \item {LeetCode \textbf{780+ problems} solved}
   \vspace{-5pt}
   \item {Member of Student Council (2017 - 2018)}
   \vspace{-5pt}
