--- a/main.tex
+++ b/main.tex
@@ -108,35 +108,28 @@
     \resumeSubHeadingListStart
     \resumeSubheading
       {Spring Dale College}{Lucknow, India}
-      {Intermediate (ISC);  Percentage: \textbf{88.6}}{Mar 2020 - Feb 2021}
+      {Intermediate (ISC);  Percentage: \textbf{88.25}}{Mar 2020 - Feb 2021}
     \resumeSubHeadingListEnd
 \vspace{-3pt}
     \resumeSubHeadingListStart
     \resumeSubheading
       {Spring Dale College}{Lucknow, India}
-      {Matriculation (ICSE);  Percentage: \textbf{91.4}}{Mar 2018 - Feb 2019}
+      {Matriculation (ICSE);  Percentage: \textbf{91.40}}{Mar 2018 - Feb 2019}
     \resumeSubHeadingListEnd
     \vspace{2pt}
 
 
 %--Skills--
 \section{Skills Summary}
-\begin{description}[font=$\bullet$]
-  \item \textbf{Languages:}{~~~~~~~~~~~~~~~C++, Core Java, SQL, HTML5, CSS, JavaScript (Basic)}
-  \vspace{-5pt}
-  \item \textbf{Frameworks:}{~~~~~~~~~~~~Android Jetpack Compose, Bootstrap}
-  \vspace{-5pt}
-  \item \textbf{Tools \& Libraries:}{~~~~Git, C++ STL, Android Jetpack Compose, Bootstrap}
-  \vspace{-5pt}
-  \item \textbf{Platforms:}{~~~~~~~~~~~~~~~Visual Studio Code, Android Studio, GitHub, Figma}
-  \vspace{-5pt}
-  \item \textbf{Familiar:}{~~~~~~~~~~~~~~~~~~C, Python}
-  \vspace{-5pt}
-  \item \textbf{Courseworks:}{~~~~~~~~~~~Object Oriented Programming, Database Management System, Operating System,}\\ \vspace{2pt}{~~~~~~~~~~~~~~~~~~~~~~~~~~~Data Structures \& Algorithms}
-  \vspace{-5pt}
-  \item \textbf{Soft Skills:}{~~~~~~~~~~~~~~~Active Learning, Emotional Intelligence, Task Management, Workability}
-  \vspace{-5pt}
-\end{description}
+	\resumeSubHeadingListStart
+	\resumeSubItem{Languages}{~~~~~~~~~~~~~~C++, Core Java, SQL, HTML5, CSS, JavaScript}
+	\resumeSubItem{Frameworks}{~~~~~~~~~~~Android Jetpack Compose, Bootstrap}
+	\resumeSubItem{Tools \& Libraries}{~~~Git, C++ STL}
+  \resumeSubItem{Platforms}{~~~~~~~~~~~~~~~Visual Studio Code, Android Studio, GitHub, Figma}
+  \resumeSubItem{Courseworks}{~~~~~~~~~~Data Structures, Object Oriented Programming, Database Management System, Operating System}
+  \resumeSubItem{Familiar}{~~~~~~~~~~~~~~~~~C, Python}
+	\resumeSubItem{Soft Skills}{~~~~~~~~~~~~~~Active Learning, Emotional Intelligence, Task Management, Workability}
+\resumeSubHeadingListEnd
 \vspace{2pt}
 
 
@@ -147,11 +140,11 @@
 \resumeSkillSubheading{Optimized Travel Route Planner}{C, C++, Data Structure}
 \vspace {-2pt}
 \resumeSubHeadingSimpleListStart
-\resumeSimpleSubItem{Implemented Dijkstra's Algorithm to determine the optimal flight route between the origin and destination.}{}
+\resumeSimpleSubItem{Implemented Dijkstra’s Algorithm to determine the optimal flight between the origin and destination.}{}
 \vspace{2pt}
 \resumeSimpleSubItem{Mainly uses Graph which takes the source and destination as an input parameters.}{}
 \vspace{2pt}
-\resumeSimpleSubItem{Returns an .html file displaying the calculated route based on two options, the cheapest or fastest.}{}
+\resumeSimpleSubItem{Returns an .html file displaying the calculated route based on user-defined preferences such as the cheapest or fastest.}{}
 \resumeSubHeadingSimpleListEnd
 \vspace{2pt}
 
@@ -166,7 +159,7 @@
 \resumeSubHeadingSimpleListEnd
 \vspace{2pt}
 
-\resumeSkillSubheading{Bookmania - Digitized bookstore}{HTML, CSS, JavaScript}
+\resumeSkillSubheading{Bookmania - Digitized bookstore}{HTML, CSS, JavaScript, ReactJS}
 \vspace{-2pt}
 \resumeSubHeadingSimpleListStart
 \resumeSimpleSubItem {Engineered a responsive and user-friendly web-based frontend.}{}
@@ -190,7 +183,7 @@
 %--Other Achievements--
 \section{Activities \& Achievements}
 \begin{description}[font=$\bullet$]
-  \item {LeetCode \textbf{780+ problems} solved}
+  \item {LeetCode \textbf{500+ problems} solved}
   \vspace{-5pt}
   \item {Member of Student Council (2017 - 2018)}
   \vspace{-5pt}
