--- a/main.tex
+++ b/main.tex
@@ -122,12 +122,12 @@
 %--Skills--
 \section{Skills Summary}
 	\resumeSubHeadingListStart
-	\resumeSubItem{Languages}{~~~~~~~~~~~~~~C++, Core Java, SQL, HTML5, CSS, JavaScript}
+	\resumeSubItem{Languages}{~~~~~~~~~~~~~~C++, Core Java, SQL, HTML, CSS, JavaScript}
 	\resumeSubItem{Frameworks}{~~~~~~~~~~~Android Jetpack Compose, Bootstrap}
 	\resumeSubItem{Tools \& Libraries}{~~~Git, C++ STL}
-  \resumeSubItem{Platforms}{~~~~~~~~~~~~~~~Visual Studio Code, Android Studio, GitHub, Figma}
+  \resumeSubItem{Platforms}{~~~~~~~~~~~~~~~GitHub, Figma, Visual Studio Code, Android Studio}
   \resumeSubItem{Courseworks}{~~~~~~~~~~Data Structures, Object Oriented Programming, Database Management System, Operating System}
-  \resumeSubItem{Familiar}{~~~~~~~~~~~~~~~~~C, Python}
+  \resumeSubItem{Familiar}{~~~~~~~~~~~~~~~~~C, Python, Kotlin}
 	\resumeSubItem{Soft Skills}{~~~~~~~~~~~~~~Active Learning, Emotional Intelligence, Task Management, Workability}
 \resumeSubHeadingListEnd
 \vspace{2pt}
@@ -159,12 +159,12 @@
 \resumeSubHeadingSimpleListEnd
 \vspace{2pt}
 
-\resumeSkillSubheading{Bookmania - Digitized bookstore}{HTML, CSS, JavaScript, ReactJS}
+\resumeSkillSubheading{Bookmania - Digitized bookstore}{HTML, CSS, JavaScript, Bootstrap}
 \vspace{-2pt}
 \resumeSubHeadingSimpleListStart
-\resumeSimpleSubItem {Engineered a responsive and user-friendly web-based frontend.}{}
+\resumeSimpleSubItem {Utilized Bootstrap framework to build responsive and mobile-first layout, streamlining development and ensuring cross-browser compatibility.}{}
 \vspace{2pt}
-\resumeSimpleSubItem{Aimed at enhancing browsing and purchasing experience for users ensuring seamless navigation.}{}
+\resumeSimpleSubItem{Designed and structured the website with a focus on clean, semantic HTML for accessibility and SEO optimization.}{}
 \resumeSubHeadingSimpleListEnd
 \resumeSubHeadingListEnd
 \vspace{3pt}
@@ -215,7 +215,7 @@
 \resumeSubHeadingSimpleListStart
 \resumeSimpleSubItem {\textbf{Languages known:}}{~~~~~~~English, Hindi}
 \vspace{-1pt}
-\resumeSimpleSubItem{\textbf{Hobbies \& Interests:}}{~~~Music, Origami, Gardening}
+\resumeSimpleSubItem{\textbf{Hobbies \& Interests:}}{~~~Music, Origami, Photography}
 \resumeSubHeadingSimpleListEnd
 \vspace{2pt}
 
